<resources>
    <string name="app_name">WanLearning</string>

    <string name="slogan_two">Daily appetizersfor your eyes. Bon eyepétit.</string>

    <string name="request_permission_picture_processing">需要存储权限来处理您的图片信息</string>
    <string name="request_permission_error_tip">所需权限被拒绝，该功能暂不可用</string>

    <string name="press_again_to_exit">再按一次退出%1$s</string>
    <string name="network_request_unknown_error">请求失败，请稍后再试。</string>
    <string name="network_request_parse_error">解析错误，请稍后再试。</string>
    <string name="network_request_connect_error">网络连接错误，请稍后重试。</string>
    <string name="network_request_ssl_error">证书出错，请稍后再试。</string>
    <string name="network_request_timeout_error">网络连接超时，请稍后再试。</string>

    <string name="menu_bottom_home">首页</string>
    <string name="menu_bottom_wechat">公众号</string>
    <string name="menu_bottom_project">项目</string>
    <string name="menu_bottom_nav">导航</string>
    <string name="menu_bottom_me">我的</string>
    <string name="menu_top_search">搜索</string>
    <string name="menu_top_setting">设置</string>
    <string name="menu_top_web">网页</string>

    <string name="common_load_loading">正在加载中...</string>
    <string name="common_load_empty">当前没有数据。</string>
    <string name="common_load_error">系统异常，请稍后。</string>
    <string name="common_load_retry">请点击我重试</string>

    <string name="item_on_top">置顶</string>
    <string name="item_fresh">新</string>

    <string name="mine_item_hint_login">请先登陆</string>
    <string name="mine_item_hint_info">id：--  排名：--</string>
    <string name="mine_item_integral">我的积分</string>
    <string name="mine_item_curr_integral">当前积分</string>
    <string name="mine_item_articles">我的文章</string>
    <string name="mine_item_todo">待办事项</string>
    <string name="mine_item_wan">玩Android</string>
    <string name="mine_item_setting">系统设置</string>

    <string name="setting_base">基本设置</string>
    <string name="setting_other">其他设置</string>
    <string name="setting_login_out">退出登录</string>
    <string name="setting_top">显示置顶文章</string>
    <string name="setting_top_tip">开启后首页会显示置顶文章</string>
    <string name="clear_cache">清除缓存</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">设置App的主题颜色</string>
    <string name="setting_about">关于</string>
    <string name="setting_project">开源项目</string>
    <string name="setting_version">版本</string>
    <string name="setting_exit">退出</string>
    <string name="copyright">版权声明</string>
    <string name="copyright_tip">本App使用的Api均为 玩Android网站提供，仅供于大家学习交流</string>
    <string name="copyright_summary">仅作个人及非商业用途</string>

    <string name="author">作者</string>
    <string name="author_name">cryAllen</string>
    <string name="project_address">项目源码</string>
    <string name="github_url">https://github.com/cr330326/WanLearning</string>

    <string name="setting_login_out_tip">确定退出登录吗</string>
    <string name="setting_clear_tip">确定清理缓存吗</string>

    <string name="dialog_confirm">确定</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_clear">清理</string>
    <string name="dialog_settings">设置</string>

    <string name="login_item_hint_username">账户</string>
    <string name="login_item_hint_password">密码</string>
    <string name="login_item_hint_confirm_password">确认密码</string>
    <string name="login_item_login">登陆</string>
    <string name="login_item_register">注册</string>
    <string name="login_item_register_login">注册并登陆</string>

    <string name="login_item_input_username_tip">账号不能为空，请重新输入</string>
    <string name="login_item_input_password_tip">密码不能为空，请重新输入</string>
    <string name="login_success_tip">恭喜你，登陆成功！</string>
</resources>