<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cryallen.wanlearning.viewmodel.LoginViewModel" />

        <variable
            name="click"
            type="com.cryallen.wanlearning.ui.fragment.LoginFragment.ProxyClick" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/login_toolbar"
            layout="@layout/include_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/qb_px_36"
            android:layout_marginRight="@dimen/qb_px_36"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_96"
                android:layout_marginTop="@dimen/qb_px_200"
                android:background="@drawable/edit_shape"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_item_hint_username"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="20"
                    android:paddingLeft="@dimen/qb_px_24"
                    android:paddingRight="@dimen/qb_px_24"
                    android:text="@={viewModel.username}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sb_px_30"
                    tools:text="test11"/>

                <ImageView
                    android:layout_width="@dimen/qb_px_48"
                    android:layout_height="@dimen/qb_px_48"
                    android:layout_marginRight="@dimen/qb_px_12"
                    android:onClick="@{()->click.clickClear()}"
                    android:src="@mipmap/ic_clear" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_96"
                android:layout_marginTop="@dimen/qb_px_60"
                android:background="@drawable/edit_shape"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_item_hint_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:paddingLeft="@dimen/qb_px_24"
                    android:paddingRight="@dimen/qb_px_24"
                    android:text="@={viewModel.password}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sb_px_30"
                    bind:showPwd="@{viewModel.isShowPwd}" />

                <CheckBox
                    android:layout_width="@dimen/qb_px_48"
                    android:layout_height="@dimen/qb_px_48"
                    android:layout_marginRight="@dimen/qb_px_12"
                    android:button="@drawable/key_visibily_selector"
                    android:checked="false"
                    android:visibility="@{viewModel.passwordVisible}"
                    bind:checkChange="@{click.onCheckedChangeListener}" />
            </LinearLayout>

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/qb_px_96"
                android:layout_marginTop="@dimen/qb_px_60"
                android:layout_marginBottom="@dimen/qb_px_24"
                android:background="@drawable/button_shape"
                android:gravity="center"
                android:text="@string/login_item_login"
                android:onClick="@{()->click.clickLogin()}"
                android:textColor="@color/white"
                android:textSize="@dimen/sb_px_32" />

            <TextView
                android:id="@+id/loginGoregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="@dimen/qb_px_24"
                android:onClick="@{()->click.clickRegister()}"
                android:paddingLeft="@dimen/qb_px_36"
                android:paddingTop="@dimen/qb_px_36"
                android:paddingBottom="@dimen/qb_px_36"
                android:text="@string/login_item_register_login"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sb_px_30" />
        </LinearLayout>
    </LinearLayout>
</layout>