<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/qb_px_98"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/qb_px_40">

    <ImageView
        android:id="@+id/iv_menu_home"
        android:layout_width="@dimen/qb_px_42"
        android:layout_height="@dimen/qb_px_42"
        android:src="@mipmap/ic_menu_home"
        app:layout_constraintBottom_toTopOf="@+id/tv_menu_home"
        app:layout_constraintEnd_toStartOf="@id/iv_menu_wechat"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_menu_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/menu_bottom_home"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sb_px_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_home"
        app:layout_constraintStart_toStartOf="@id/iv_menu_home"
        app:layout_constraintTop_toBottomOf="@id/iv_menu_home" />

    <ImageView
        android:id="@+id/iv_menu_wechat"
        android:layout_width="@dimen/qb_px_42"
        android:layout_height="@dimen/qb_px_42"
        android:src="@mipmap/ic_menu_wechat"
        app:layout_constraintBottom_toTopOf="@id/tv_menu_wechat"
        app:layout_constraintEnd_toStartOf="@id/iv_menu_project"
        app:layout_constraintStart_toEndOf="@id/iv_menu_home"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_menu_wechat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/menu_bottom_wechat"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sb_px_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_wechat"
        app:layout_constraintStart_toStartOf="@id/iv_menu_wechat"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_wechat" />

    <ImageView
        android:id="@+id/iv_menu_project"
        android:layout_width="@dimen/qb_px_42"
        android:layout_height="@dimen/qb_px_42"
        android:src="@mipmap/ic_menu_project"
        app:layout_constraintBottom_toTopOf="@id/tv_menu_project"
        app:layout_constraintEnd_toStartOf="@id/iv_menu_navi"
        app:layout_constraintStart_toEndOf="@id/iv_menu_wechat"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_menu_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/menu_bottom_project"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sb_px_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_project"
        app:layout_constraintStart_toStartOf="@id/iv_menu_project"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_project" />

    <ImageView
        android:id="@+id/iv_menu_navi"
        android:layout_width="@dimen/qb_px_42"
        android:layout_height="@dimen/qb_px_42"
        android:src="@mipmap/ic_menu_nav"
        app:layout_constraintBottom_toTopOf="@id/tv_menu_navi"
        app:layout_constraintEnd_toStartOf="@id/iv_menu_mine"
        app:layout_constraintStart_toEndOf="@id/iv_menu_project"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_menu_navi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/menu_bottom_nav"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sb_px_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_navi"
        app:layout_constraintStart_toStartOf="@id/iv_menu_navi"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_navi" />


    <ImageView
        android:id="@+id/iv_menu_mine"
        android:layout_width="@dimen/qb_px_42"
        android:layout_height="@dimen/qb_px_42"
        android:src="@mipmap/ic_menu_me"
        app:layout_constraintBottom_toTopOf="@id/tv_menu_mine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_menu_navi"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_menu_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/menu_bottom_me"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/sb_px_22"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_mine"
        app:layout_constraintStart_toStartOf="@id/iv_menu_mine"
        app:layout_constraintTop_toBottomOf="@+id/iv_menu_mine" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_menu_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="iv_menu_home,tv_menu_home"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_home"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_home"
        app:layout_constraintStart_toStartOf="@id/iv_menu_home"
        app:layout_constraintTop_toTopOf="@+id/iv_menu_home"
        tools:background="@color/color_80000000" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_menu_wechat"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_wechat"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_wechat"
        app:layout_constraintStart_toStartOf="@id/iv_menu_wechat"
        app:layout_constraintTop_toTopOf="@+id/iv_menu_wechat"
        tools:background="@color/color_80000000" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_menu_project"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_project"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_project"
        app:layout_constraintStart_toStartOf="@id/iv_menu_project"
        app:layout_constraintTop_toTopOf="@+id/iv_menu_project"
        tools:background="@color/color_80000000" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_menu_navi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_navi"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_navi"
        app:layout_constraintStart_toStartOf="@id/iv_menu_navi"
        app:layout_constraintTop_toTopOf="@+id/iv_menu_navi"
        tools:background="@color/color_80000000" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/btn_menu_mine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_menu_mine"
        app:layout_constraintEnd_toEndOf="@id/iv_menu_mine"
        app:layout_constraintStart_toStartOf="@id/iv_menu_mine"
        app:layout_constraintTop_toTopOf="@+id/iv_menu_mine"
        tools:background="@color/color_80000000" />

</androidx.constraintlayout.widget.ConstraintLayout>